# algorithms

./: README.md  boyer_moore.zig  fetch_transformer.js  kmp.zig  lzwcomp.c
async_hooks_demo/: README.md  package-lock.json  package.json  test.mjs
avl-zig/: README.md  build.zig
avl-zig/src/: iter.zig  main.zig
imageoperatorrs/: Cargo.toml  Dockerfile  deployment.yaml  item.yaml  out  resource.yaml
imageoperatorrs/helm-chart/image-processor-operator/: Chart.yaml  values.yaml
imageoperatorrs/helm-chart/image-processor-operator/templates/: CRD.yaml  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
imageoperatorrs/src/: main.rs
json_parser/: JsonParser.test.ts  JsonParser.ts  JsonTypes.ts  ParserBase.ts  PrimitiveJsonParser.ts  README.md  deps.ts  main.ts  random.json
node_hooks/: README.md  hooks.mjs  my-app-x.js  my-app.js  package.json  register-hooks.cjs
thompson_nfa/: build.zig  c_test.c  ct  nfa  thomson_nfa.c  thomson_nfa_copy.c
thompson_nfa/src/: .main.zig.swp  automaton.zig  dfamain.zig  main.zig
vtables/: calculator_implementation.zig  calculator_interface.zig
zig_mac_perf_events/: README.md  build.zig  build.zig.zon  perf  perf.zig
zig_mac_perf_events/src/: lib.zig
