[package]
name = "image-processor-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
kube = { version = "0.87", features = ["runtime", "derive" ] }
k8s-openapi = { version = "0.20", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thiserror = "1.0"
base64 = "0.21"
image = { version = "0.24", features = ["jpeg"] }
schemars = "0.8"

